Closes #156 : "Confirm parameter is not secured"
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/lemonldap/trunk/contribs/apache-session-nosql@1600 1dbb9719-a921-0410-b57f-c3a383c2c641

--- a/Changes
+++ b/Changes
@@ -10,3 +10,4 @@ Revision history for Perl extension Apache::Session::NoSQL.
 0.03  Fri Sep 24 11:58:12 +0200 2010
     - More doc
     - Dependencies
+    (revision 1599)
