Add Apache::Session::Cassandra Add pod Fix bug in Redis
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/lemonldap/trunk/contribs/apache-session-nosql@1894 1dbb9719-a921-0410-b57f-c3a383c2c641

--- a/Changes
+++ b/Changes
@@ -11,3 +11,7 @@ Revision history for Perl extension Apache::Session::NoSQL.
     - More doc
     - Dependencies
     (revision 1599)
+
+0.1   Mon Dec 6 21:54:55 +0100 2010
+    - Bug: materialize does not work with Redis
+
