--- a/Changes
+++ b/Changes
@@ -15,3 +15,5 @@ Revision history for Perl extension Apache::Session::NoSQL.
 0.1   Mon Dec 6 21:54:55 +0100 2010
     - Bug: materialize does not work with Redis
 
+0.2   Wed Jul 22 2015
+    - Bug: [RT#94613] Bug in Apache::Session::NoSQL when trying to use Apache::Session::Redis #2
